--- a/src/MoneyManager.Web/Shared/MoneyInput.razor
+++ b/src/MoneyManager.Web/Shared/MoneyInput.razor
@@ -7,6 +7,7 @@
        value="@displayValue"
        placeholder="@Placeholder"
        inputmode="decimal"
+       disabled="@Disabled"
        @oninput="OnInput"
        @onblur="OnBlur"
        @onfocus="OnFocus" />
@@ -20,6 +21,9 @@
 
     [Parameter]
     public string? Placeholder { get; set; }
+
+    [Parameter]
+    public bool Disabled { get; set; }
 
     private string displayValue = string.Empty;
     private string rawValue = string.Empty;
