--- a/src/MoneyManager.Web/Pages/Transactions.razor
+++ b/src/MoneyManager.Web/Pages/Transactions.razor
@@ -1,5 +1,6 @@
 @page "/transactions"
 @using MoneyManager.Domain.Entities
+@using MoneyManager.Domain.Enums
 @using MoneyManager.Web.Services
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
@@ -43,9 +44,9 @@
                     <div class="col-md-3">
                         <select class="form-select" @bind="newRequest.AccountId">
                             <option value="">-- Conta --</option>
-                            @foreach (var a in accountsList)
+                            @foreach (var a in GetAccountsOrdered(accountsList))
                             {
-                                <option value="@a.Id">@a.Name</option>
+                                <option value="@a.Id">@a.Name (@GetAccountTypeLabel(a.Type))</option>
                             }
                         </select>
                     </div>
@@ -54,11 +55,11 @@
                         <div class="col-md-3">
                             <select class="form-select" @bind="newRequest.ToAccountId">
                                 <option value="">-- Conta destino --</option>
-                                @foreach (var a in accountsList)
+                                @foreach (var a in GetAccountsOrdered(accountsList))
                                 {
                                     if (a.Id != newRequest.AccountId)
                                     {
-                                        <option value="@a.Id">@a.Name</option>
+                                        <option value="@a.Id">@a.Name (@GetAccountTypeLabel(a.Type))</option>
                                     }
                                 }
                             </select>
@@ -349,5 +350,40 @@
             return "Sem categoria";
         
         return categoriesDict.TryGetValue(categoryId, out var name) ? name : "Categoria desconhecida";
+    }
+
+    private static IEnumerable<Account> GetAccountsOrdered(IEnumerable<Account>? accounts)
+    {
+        if (accounts is null) return Enumerable.Empty<Account>();
+
+        return accounts
+            .OrderBy(a => GetAccountTypeSortKey(a.Type))
+            .ThenBy(a => a.Name);
+    }
+
+    private static int GetAccountTypeSortKey(AccountType type)
+    {
+        return type switch
+        {
+            AccountType.Cash => 0,
+            AccountType.Checking => 1,
+            AccountType.Savings => 2,
+            AccountType.CreditCard => 3,
+            AccountType.Investment => 4,
+            _ => 99
+        };
+    }
+
+    private static string GetAccountTypeLabel(AccountType type)
+    {
+        return type switch
+        {
+            AccountType.Cash => "Dinheiro",
+            AccountType.Checking => "Conta Corrente",
+            AccountType.Savings => "Poupança",
+            AccountType.CreditCard => "Cartão de crédito",
+            AccountType.Investment => "Investimento",
+            _ => type.ToString()
+        };
     }
 }
